Bug 158794 - Pasting a DDE link into a footnote / endnote crashes
Summary: Pasting a DDE link into a footnote / endnote crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL: https://ask.libreoffice.org/t/query-o...
Whiteboard: target:24.8.0 target:24.2.0.0.beta2 t...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-20 15:50 UTC by Mike Kaganski
Modified: 2025-03-04 20:08 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-12-20 15:50:48 UTC
1. Create a Calc document
2. Put 1 into A1
3. Select A1
4. Copy to clipboard (Ctrl+C)

5. Create a Writer document
6. Insert a footnote
7. Edit->Paste Special->Paste Special (Ctrl+Shift+V), select Dynamic Data Exchange (DDE Link) -> OK

=> Crash
Comment 1 Mike Kaganski 2023-12-20 15:57:45 UTC
https://gerrit.libreoffice.org/c/core/+/161078
Comment 2 Commit Notification 2023-12-20 19:59:00 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3a33a97d2358a7ad2e67c01edc1fca29d1b7041c

tdf#158794: do not try to insert DDE table into footnotes / endnotes

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-12-21 11:05:00 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/952ce9b534857151ae57e517bc7ab6c9190b9916

tdf#158794: do not try to insert DDE table into footnotes / endnotes

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-03-04 20:08:56 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/68722fce71ac5bee808bebb76caf32128d6e9ca0

tdf#158794: sw: Add UItest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.