tdf#158794: do not try to insert DDE table into footnotes / endnotes

Until tdf#76007 is fixed, of course.

Change-Id: Iad7fb0de679e024a8cebdd005ac5a66af3ace163
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161078
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>